[tool.poetry]
name = "my-first-workflow"
version = "0.1.0"
description = ""
authors = ["pavelpminaev <pavelpminaev@gmail.com>"]
readme = "README.md"
packages = [{include = "my_first_workflow"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
prompt = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
